--- a/myindex.html
+++ b/myindex.html
@@ -11,21 +11,22 @@
 </head>
 <body>
 
-  Preview
+  <p id="product-category">Perfume</p>
 
-  Gabrielle Essence Eau De Parfum
+  <p id="product-name">Gabrielle Essence Eau De Parfum</p>
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+  <p id="description">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+  Perfumer-Creator for the House of CHANEL.</p>
 
-  $149.99
-  $169.99
+  <p id="current-price">$149.99</p>
+  <p id="original-price">$169.99</p>
 
-  Add to Cart
+  <button type="submit">Add to Cart</button>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  
 </body>
 </html>
