--- a/myindex.html
+++ b/myindex.html
@@ -11,22 +11,27 @@
 </head>
 <body>
 
-  <p id="product-category">Perfume</p>
+<article class="card">
+ 
+  <img class="card__image" src="/images/image-product-desktop.jpg" alt="A square bottle of perfume with a silver cap and a white sticker label in the middle of the front side" />
 
-  <p id="product-name">Gabrielle Essence Eau De Parfum</p>
+  <p class="card__product-category">Perfume</p>
 
-  <p id="description">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+  <p class="card__product-name card--bold">Gabrielle Essence Eau De Parfum</p>
+
+  <p class="card__description">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
   Perfumer-Creator for the House of CHANEL.</p>
 
-  <p id="current-price">$149.99</p>
-  <p id="original-price">$169.99</p>
+  <p class="card__current-price">$149.99</p>
+  <p class="card__original-price">$169.99</p>
 
-  <button type="submit">Add to Cart</button>
+  <button type="submit" class="card__cart-btn">Add to Cart</button>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
-  
+</article>
+
 </body>
 </html>
