--- a/myindex.html
+++ b/myindex.html
@@ -13,7 +13,11 @@
 
 <article class="card">
  
+  <picture class="card__image">
+    <source class="card--small" media="(max-width: 499px)" srcset="images/image-product-mobile.jpg" />
+    <source class="card--big" media="(min-width: 500px)" srcset="images/image-product-desktop.jpg" />
   <img class="card__image" src="images/image-product-desktop.jpg" alt="A square bottle of perfume with a silver cap and a white sticker label in the middle of the front side" />
+  </picture>
 
   <p class="card__product-category">Perfume</p>
 
