--- a/myindex.html
+++ b/myindex.html
@@ -19,7 +19,7 @@
   <img class="card__image" src="images/image-product-desktop.jpg" alt="A square bottle of perfume with a silver cap and a white sticker label in the middle of the front side" />
   </picture>
 
-  <p class="card__product-category">Perfume</p>
+  <p class="card__product-category">PERFUME</p>
 
   <p class="card__product-name card--bold">Gabrielle Essence Eau De Parfum</p>
 
@@ -33,7 +33,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Megan</a>.
   </div>
   
 </article>
