--- a/myindex.html
+++ b/myindex.html
@@ -21,7 +21,7 @@
 
   <p class="card__product-category">PERFUME</p>
 
-  <p class="card__product-name card--bold">Gabrielle Essence Eau De Parfum</p>
+  <p class="card__product-name">Gabrielle Essence Eau De Parfum</p>
 
   <p class="card__description">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
   Perfumer-Creator for the House of CHANEL.</p>
