--- a/myindex.html
+++ b/myindex.html
@@ -29,7 +29,7 @@
   <p class="card__current-price">$149.99</p>
   <p class="card__original-price">$169.99</p>
 
-  <button type="submit" class="card__cart-btn">Add to Cart</button>
+  <button type="button" class="card__cart-btn">Add to Cart</button>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
