--- a/myindex.html
+++ b/myindex.html
@@ -18,7 +18,8 @@
     <source class="card--big" media="(min-width: 500px)" srcset="images/image-product-desktop.jpg" />
   <img class="card__image" src="images/image-product-desktop.jpg" alt="A square bottle of perfume with a silver cap and a white sticker label in the middle of the front side" />
   </picture>
-
+  
+  <div class="card__word-container">
   <p class="card__product-category">PERFUME</p>
 
   <p class="card__product-name">Gabrielle Essence Eau De Parfum</p>
@@ -35,7 +36,8 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Megan</a>.
   </div>
-  
+</div>
+
 </article>
 
 </body>
