--- a/myindex.html
+++ b/myindex.html
@@ -18,7 +18,7 @@
     <source class="card--big" media="(min-width: 500px)" srcset="images/image-product-desktop.jpg" />
   <img class="card__image" src="images/image-product-desktop.jpg" alt="A square bottle of perfume with a silver cap and a white sticker label in the middle of the front side" />
   </picture>
-  
+
   <div class="card__word-container">
   <p class="card__product-category">PERFUME</p>
 
@@ -27,8 +27,10 @@
   <p class="card__description">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
   Perfumer-Creator for the House of CHANEL.</p>
 
+  <div class="card__price-container">
   <p class="card__current-price">$149.99</p>
   <p class="card__original-price">$169.99</p>
+</div>
 
   <button type="button" class="card__cart-btn">Add to Cart</button>
   
